--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -20,9 +20,11 @@
     </nav>
     <main>  
         <section>  
-          <h2>Welcome to TechCon 2024</h2>  
+          <h2>Welcome to TechCon 2024</h2>
           <p>TechCon 2024 is the premier technology conference of the year, bringing together industry leaders and innovators to share their insights and expertise.</p>   
-            <iframe width="947" height="542" src="https://www.youtube.com/embed/B_-HF-RNdjw" title="TechCon SoCal 2024 Promo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+            <video controls>
+            <iframe width="947" height="542" src="https://www.youtube.com/embed/B_-HF-RNdjw" title="TechCon SoCal 2024 Promo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </video>
         </section>  
       </main>  
       <footer>  
