--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -42,9 +42,9 @@
           <td>Michael Johnson</td>
         </tr>
       </table>
-      <footer>  
-        <p>© 2024 TechCon 2024. All rights reserved.</p>  
-      </footer> 
+    <footer>
+        <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
+    </footer> 
     </main>
 </body>
 </html>
