--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -43,7 +43,7 @@
         </tr>
       </table>
     <footer>
-        <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
+        <p>&copy; copyright 2024 TechCon Conference. All rights reserved.</p>
     </footer> 
     </main>
 </body>
