--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -54,7 +54,7 @@
     
     </main>
     <footer>  
-        <p>© 2024 TechCon 2024. All rights reserved.</p>  
+        <p>&copy;© 2024 TechCon 2024. All rights reserved.</p>  
       </footer> 
     
 </body>
